# km-backend/src/main/java/com/km/dto/response/SearchResultItemVO.java
@@ -12,5 +12,7 @@ public class SearchResultItemVO {
     private String content;
     private Float similarityScore;
     private Float rerankScore;
+    private Float bm25Score;
+    private Float hybridScore;
     private String chunkType;
 }
